lib/src/compiler/tests/testdata/errors/58.out
error[E004]: wrong arguments
 --> line:4:20
  |
4 |     test_proto2.add(1, "2") == 3
  |                    ^^^^^^^^ wrong arguments in this call
  |
  = note: accepted argument combinations:
          
          (float, float)
          (integer, integer)